--- a/admin-server/package.json
+++ b/admin-server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "express": "^4.21.0",
     "firebase-admin": "^12.5.0",
     "mysql2": "^3.11.3"
   }
