--- a/admin-server/package.json
+++ b/admin-server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "firebase-admin": "^12.5.0",
     "mysql2": "^3.11.3"
